# base-xigma-md

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  RAILWAY.md  config.ron  menu.txt  readme.md
session/: phone.txt
src/: config.ron  config.rs  handler.rs  main.rs
src/controller/: admin_tools.rs  debug.rs  downloader_igreel.rs  fun_dadu.rs  fun_kapan.rs  get_lid.rs  group_tools.rs  menu.rs  mod.rs  owner.rs  owner_tools.rs  ping.rs  request_payment_message.rs  settings.rs  sticker.rs  swgc.rs  ytdl.rs
src/controller/ytdl/: commands.rs  context.rs  mod.rs  sender.rs  types.rs  ytdlp.rs
src/util/: converter.rs  helper.rs  igdl.rs  img.rs  mod.rs  msg.rs  queue.rs  stopwatch.rs
