[package]
name = "xigma-md"
version = "0.4.2"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
whatsapp-rust = "0.2.0"
whatsapp-rust-tokio-transport = "0.2.0"
whatsapp-rust-ureq-http-client = "0.2.0"
qrcode = "0.14"
waproto = "0.2.0"
image = "0.25.9"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
ron = "0.10.1"
regex = "1.12.3"
urlencoding = "2.1.3"
wacore = "0.2.0"
anyhow = "1.0.101"
chrono = "0.4.43"
wacore-binary = "0.2.0"
futures = "0.3.31"